Fix scrollbar repositioning.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  overflow-y: scroll;
 }
 
 .SuggestionWrapper {
